--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,197 @@
 body {
+    margin: unset;
     background-color: lightgray;
+}
+
+h2{
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 20px;
+    letter-spacing: 2px;
+    color: #000000;
+    font-weight: 700;
+    text-decoration: underline solid rgb(68, 68, 68);
+    font-style: normal;
+    font-variant: normal;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+h3{
+    font-family: Impact, Charcoal, sans-serif;
+    font-size: 20px;
+    letter-spacing: 2px;
+    color: #000000;
+    font-weight: 400;
+    text-decoration: rgb(68, 68, 68);
+    font-style: normal;
+    font-variant: small-caps;
+}
+
+/*NAVIGATION*/
+
+nav {
+    background: #0099CC;
+    color: #FFF;
+    width: 100%;
+    height: 45px;
+    padding-left: 18px;
+    position: fixed;
+}
+nav ul, nav li {
+    margin: 0 auto;
+    padding: 0;
+    list-style: none
+}
+nav ul {
+    width: 100%;
+}
+nav li {
+    float: left;
+    display: inline;
+    position: relative;
+}
+nav a {
+
+    font-family: Impact, Charcoal, sans-serif;
+    font-weight: 400;
+    text-decoration: none solid rgb(68, 68, 68);
+    font-style: normal;
+    font-variant: normal;
+    display: block;
+    line-height: 45px;
+    padding: 0 14px;
+    color: #FFFFFF;
+    font-size: 20px;
+    text-transform: uppercase;
+}
+nav a.dropdown-arrow:after {
+    content: "\25BE";
+    margin-left: 5px;
+}
+nav li a:hover {
+    color: #0099CC;
+    background: #F2F2F2;
+}
+nav input {
+    display: none;
+    margin: 0;
+    padding: 0;
+    height: 45px;
+    width: 100%;
+    opacity: 0;
+    cursor: pointer
+}
+nav label {
+    display: none;
+    line-height: 45px;
+    text-align: center;
+    position: absolute;
+    left: 35px
+}
+nav label:before {
+    font-size: 1.6em;
+    content: "\2261";
+    margin-left: 20px;
+}
+nav ul.sub-menus{
+    height: auto;
+    overflow: hidden;
+    width: 170px;
+    background: #444444;
+    position: absolute;
+    z-index: 99;
+    display: none;
+}
+nav ul.sub-menus li {
+    display: block;
+    width: 100%;
+}
+nav ul.sub-menus a {
+    color: #FFFFFF;
+    font-size: 16px;
+}
+nav li:hover ul.sub-menus {
+    display: block
+}
+nav ul.sub-menus a:hover{
+    background: #F2F2F2;
+    color: #444444;
+}
+@media screen and (max-width: 800px){
+    nav {position:relative}
+    nav ul {background:#111;position:absolute;top:100%;right:0;left:0;z-index:3;height:auto;display:none}
+    nav ul.sub-menus {width:100%;position:static;}
+    nav ul.sub-menus a {padding-left:30px;}
+    nav li {display:block;float:none;width:auto;}
+    nav input, nav label {position:absolute;top:0;left:0;display:block}
+    nav input {z-index:4}
+    nav input:checked + label {color:white}
+    nav input:checked + label:before {content:"\00d7"}
+    nav input:checked ~ ul {display:block}
+}
+
+/*PROFIL*/
+
+.profil {
+    width: 100%;
+    height: 1000px;
+    background-image: url("https://cdn.pixabay.com/photo/2017/10/10/21/49/youtuber-2838945_960_720.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+/*CONTENT*/
+
+.competences {
+    width: 70%;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #B0413E;
+}
+
+.parcours {
+    width: 70%;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: #1C6EA4;
+}
+
+.realisations {
+    width: 40%;
+    padding: 5px;
+    border-radius: 10px;
+    background-color: aqua;
+}
+
+/*TABLE*/
+
+table {
+    border: 1px solid #1C6EA4;
+    background-color: #EEEEEE;
+    width: 100%;
+    text-align: right;
+    border-collapse: collapse;
+}
+table td, table th {
+    border: 1px solid #AAAAAA;
+    padding: 5px 3px;
+}
+table tbody td {
+    font-size: 13px;
+}
+table tr:nth-child(even) {
+    background: #D0E4F5;
+}
+table tfoot td {
+    font-size: 14px;
+}
+table tfoot .links {
+    text-align: right;
+}
+table tfoot .links a{
+    display: inline-block;
+    background: #1C6EA4;
+    color: #FFFFFF;
+    padding: 2px 8px;
+    border-radius: 5px;
 }
