--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,9 +1,4 @@
-{% extends 'base.html.twig' %}
-
-{% block title %}User index{% endblock %}
-
-{% block body %}
-    <h1>User index</h1>
+<h1>Profil</h1>
 
     <table class="table">
         <thead>
@@ -46,4 +41,3 @@
     </table>
 
     <a href="{{ path('user_new') }}">Create new</a>
-{% endblock %}
